# node-datachannel

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  Dockerfile  README.md  package-lock.json  package.json  postinstall.js  prepare-prebuilds.js
.github/workflows/: build-linux.yml
cmake/toolchain/: arm64.cmake
lib/: index.d.ts  index.js
src/: data-channel-wrapper.cpp  main.cpp  media-rtcpsrreporter-wrapper.cpp  media-rtcpsrreporter-wrapper.h  media-track-wrapper.cpp  media-track-wrapper.h
